Fixes tap delay on mobile.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+    touch-action: manipulation;
+}
+
 #main {
     display: flex;
     flex-wrap: wrap;
